fix the invisible button in admin capstone

--- a/AdminCapstone.css
+++ b/AdminCapstone.css
@@ -22,26 +22,19 @@
     overflow-y: auto; /* Enable vertical scrolling */
     overflow-x: hidden; /* Hide horizontal scrollbar */
   }
-  .container {
+  
+  /* dropdown edit profile */
+  .container{
     position: relative;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    height: 280px;
-    width: 280px;
-    bottom: 50px;
-    left: 85%;
-    z-index: 10;
+    display:flex;
+    align-items:center;
+    justify-content:center;
+    height:280px;
+    width:280px;
+    bottom: 35px;
+    left: 84%;
+    z-index:10;
   }
-  
-  .editoverlay {
-    display: none; /* Initially hidden */
-    /* Add your styling for overlay here */
-  }
-  .editoverlay.show {
-    display: block; /* Show when class 'show' is added */
-  }
-  
   .editoverlay{
     display: none;
     position: fixed;
@@ -51,13 +44,11 @@
     height: 400;
     background-color: rgba(0, 0, 0, 0.5);
     z-index: 20000;
-  
-  }   
-  
+  }  
   .dropdown-profile{
     position: absolute;
       background-color: #FFEBCF;
-      width: 400px;
+      width: 500px;
       height: 600px;
       padding: 15px;
       border: 1px solid #000000;
@@ -65,7 +56,8 @@
       top: 50%;
       left: 50%;
       transform: translate(-50%, -50%);
-  } 
+      z-index: 5px;
+  }
   .dropdown-profile h5edit{
     color: #000000;
     size: 5px;
@@ -76,16 +68,16 @@
     width:120px;
     height:120px;
     margin-top: 30px;
-    margin-left: 150px; 
+    margin-left: 185px;
     border-radius:50%;
     overflow:hidden;
     cursor:pointer;
   }
   .dropdown-profile  .profile img{
     position:absolute;
-    top: 0px; 
+    top: 0px;
     left: 0px;
-    width: 100%; 
+    width: 100%;
     height: 100%;
     object-fit:cover;
   }
@@ -94,7 +86,7 @@
   .inputEmail,
   .inputPassword{
     width: 200px;
-    border: 1px solid #000000; 
+    border: 1px solid #000000;
     margin: 10px 0 5px 0;
     padding-left: 5px;
     padding-top: 5px;
@@ -102,36 +94,33 @@
     height: 30px;
     border-radius: 10px;
     background-color: #ffffff;
-    outline: none; 
+    outline: none;
   }
-  .action{
-    position:relative;  
+   
+   
+  .action {
+    position: relative;  
   }
-  .action .profile{
-    position:relative;
-    width:60px;
-    height:60px;
-    margin-top: 40px;
+  .action .profile {
+    position: relative;
+    width: 60px;
+    height: 60px;
+    margin-top: 25px;
     margin-left: 200px;
     margin-bottom: 40px;
-    border-radius:50%;
-    overflow:hidden;
-    cursor:pointer; 
+    border-radius: 50%;
+    overflow: hidden;
+    cursor: pointer;
   }
-  .wrapper {
-    max-height: 100vh; /* Set a maximum height */
-    overflow-y: auto; /* Enable vertical scrolling */
-    overflow-x: hidden; /* Hide horizontal scrollbar */
-  }
-  .action .profile img{
-    position:absolute;
-    top: 0px; 
+  .action .profile img {
+    position: absolute;
+    top: 0px;
     left: 0px;
-    width: 100%; 
+    width: 100%;
     height: 100%;
-    object-fit:cover;
+    object-fit: cover;
   }
-  .action .menu{   
+  .action .menu {
     top: 75px;
     right: -130px;
     padding: 20px;
@@ -140,63 +129,71 @@
     width: 230px;
     border-radius: 15px;
     transition: 0.5s;
-    visibility: visible;
+    visibility: hidden;
     opacity: 0;
     z-index: 10;
   }
-  .action .menu.active{  
-    visibility:visible;
-    opacity:1;
+  .action .menu.show {
+    visibility: visible;
+    opacity: 1;
   }
-  .action .menu h3{
-    width:100%;
-    text-align:center;
+  .action .menu h3 {
+    width: 100%;
+    text-align: center;
     font-size: 18px;
-    padding:20px 0;
+    padding: 20px 0;
     font-weight: 500;
     font-size: 15px;
-    color:#000000;
+    color: #000000;
     line-height: 25px;
   }
-  .action .menu h3 span{
+  .action .menu h3 span {
     font-size: 15px;
-    color:#000000;
+    color: #000000;
     font-weight: 400;
-  } 
-  
+  }
+  .editoverlay {
+    display: none; /* Initially hidden */
+    /* Add your styling for overlay here */
+  }
+  .editoverlay.show {
+    display: block; /* Show when class 'show' is added */
+  }
+   
+   
   .logoutBtn{
     width: 170px;
-    padding: 10px; 
+    padding: 10px;
     border-radius: 15px;
-    background-color: #ffffff; 
+    background-color: #ffffff;
     text-decoration: none;
     cursor: pointer;
     transition: background-color 0.3s ease;
     font-size: 15px;
-  }     
+  }    
   .logoutBtn:hover {
-    background-color: #707070; 
+    background-color: #707070;
   }
-  
+   
   .editprofileBtn{
     width: 170px;
     padding: 10px;
     border-radius: 15px;
-    background-color: #ffffff; 
+    background-color: #ffffff;
     text-decoration: none;
     cursor: pointer;
     transition: background-color 0.3s ease;
     font-size: 15px;
-  }   
+  }  
   .editprofileBtn:hover {
-    background-color: #707070; 
-  } 
+    background-color: #707070;
+  }
   .saveEditbtn{
     width: 170px;
     padding: 10px;
     margin-top: 20px;
     border-radius: 15px;
-    background-color: #ffffff; 
+    background-color: #ffffff;
     text-decoration: none;
     cursor: pointer;
     border: 2px #000000;
@@ -204,8 +201,8 @@
     font-size: 15px;
   }
   .saveEditbtn:hover {
-    background-color: #707070; 
-  } 
+    background-color: #707070;
+  }
   
   .header {
     background-color: #213B9A;
